finished desktop changes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,6 +78,51 @@ p {
     font-weight: bold;
 }
 
+.not-active {
+    color: #acacb0;
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 80px;
+    }
+
+    h2 {
+        font-size: 64px;
+    }
+
+    h3 {
+        font-size: 36px;
+    }
+
+    h4 {
+        font-size: 20px;
+    }
+
+    h5, .subheading-1 {
+        font-size: 16px;
+    }
+
+    h5 {
+        letter-spacing: 3.5px;
+    }
+
+    p {
+        font-size: 15px;
+        line-height: 1.5;
+    }
+
+    .subheading-2 {
+        font-size: 12px;
+        letter-spacing: 2px;
+    }
+
+    .nav-text {
+        font-size: 14px;
+        letter-spacing: 2.2px;
+    }
+}
+
 /* @media only screen and (min-width:2400px) {
     h1 {
         font-size: 5rem;
