--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     overflow: hidden;
+    color: white;
 }
 
 html {
@@ -15,7 +16,6 @@ body {
     -ms-overflow-style: none;
     scrollbar-width: none;
     scroll-behavior: smooth;
-    color: white;
 }
 
 body::-webkit-scrollbar {
@@ -82,6 +82,7 @@ p {
     color: #acacb0;
 }
 
+
 @media only screen and (max-width: 600px) {
     h1 {
         font-size: 80px;
@@ -100,7 +101,7 @@ p {
     }
 
     h5, .subheading-1 {
-        font-size: 16px;
+        font-size: 14px;
     }
 
     h5 {
@@ -117,11 +118,20 @@ p {
         letter-spacing: 2px;
     }
 
+    .subheading-1 {
+        font-size: 28px;
+    }
+
     .nav-text {
         font-size: 14px;
         letter-spacing: 2.2px;
     }
+
+    .mobile-texts {
+        text-align: center;
+    }
 }
+
 
 /* @media only screen and (min-width:2400px) {
     h1 {
