--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,6 +132,50 @@ p {
     }
 }
 
+@media only screen and (max-width:1023px) and (min-width:601px){
+    h1 {
+        font-size: 150px;
+    }
+
+    h2 {
+        font-size: 80px;
+    }
+
+    h3 {
+        font-size: 36px;
+    }
+
+    h4 {
+        font-size: 32px;
+    }
+
+    h5, .subheading-1 {
+        font-size: 20px;
+    }
+
+    h5 {
+        letter-spacing: 3.38px;
+    }
+
+    p {
+        font-size: 16px;
+        line-height: 1.5;
+    }
+
+    .subheading-2 {
+        font-size: 14px;
+        letter-spacing: 2.36px;
+    }
+
+    .subheading-1 {
+        font-size: 28px;
+    }
+    .nav-text {
+        font-size: 14px;
+        letter-spacing: 2.36px;
+    }
+
+}
 
 /* @media only screen and (min-width:2400px) {
     h1 {
